--- a/style.css
+++ b/style.css
@@ -892,7 +892,54 @@ body {
     clear: both;
 }
 
+.pro {
+    background: none;
+    background-color: #f5f5f5;
+    height: 360px;
+}
 
+.pro span {
+    width: 700px;
+    height: 58px;
+    color: #212121;
+    font-family: Montserrat;
+    font-size: 62px;
+    font-weight: 400;
+    line-height: 72px;
+    float: left;
+    margin-left: 101px;
+    margin-top: 168px;
+}
+
+.block2_prod {
+    height: 1965px;
+}
+
+.block2_prod .swich {
+    height: 30px;
+    width: 740px;
+}
+
+.block2_prod .swich a {
+    text-decoration: none;
+    color: #6c6c6c;
+    font-family: Montserrat;
+    font-size: 18px;
+    font-weight: 700;
+}
+
+.block2_prod .swich a {
+    display: inline-block;
+    width: 100px;
+    height: 19px;
+    padding: 5px 10px;
+    text-align: center;
+}
+
+.block2_prod .swich a:hover  {
+    color: #212121;
+    border-bottom: 3px solid #212121;
+}
 
 
 
