--- a/style.css
+++ b/style.css
@@ -896,6 +896,7 @@ body {
     background: none;
     background-color: #f5f5f5;
     height: 360px;
+    border:  
 }
 
 .pro span {
@@ -916,8 +917,10 @@ body {
 }
 
 .block2_prod .swich {
-    height: 30px;
-    width: 740px;
+    height: 42px;
+    width: 614px;
+    margin-top: 71px;
+    margin-left: 101px;
 }
 
 .block2_prod .swich a {
@@ -926,14 +929,31 @@ body {
     font-family: Montserrat;
     font-size: 18px;
     font-weight: 700;
-}
-
-.block2_prod .swich a {
     display: inline-block;
     width: 100px;
     height: 19px;
-    padding: 5px 10px;
+    padding: 5px 10px 15px 10px;
     text-align: center;
+}
+
+.block2_prod .swich a:nth-child(1) {
+    width: 40px;
+}
+.block2_prod .swich a:nth-child(2) {
+    width: 65px;
+}
+
+.block2_prod .swich a:nth-child(3) {
+    width: 75px;
+}
+.block2_prod .swich a:nth-child(4) {
+    width: 117px;
+}
+.block2_prod .swich a:nth-child(5) {
+    width: 93px;
+}
+.block2_prod .swich a:nth-child(6) {
+    width: 91px;
 }
 
 .block2_prod .swich a:hover  {
@@ -941,9 +961,106 @@ body {
     border-bottom: 3px solid #212121;
 }
 
+.block2_prod_produtcts {
+    height: 1597px;
+    width: 1171px;
+    margin-left: 98px;
+    margin-top: 50px;
+    float: left;
+}
 
+.block2_prod_produtcts div:nth-child(1) div:nth-child(1) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-11.png);
+}
 
+.block2_prod_produtcts div:nth-child(1) div:nth-child(2) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    margin: 0px 30px;
+    background: url(img/product-21.png);
+}
 
+.block2_prod_produtcts div:nth-child(1) div:nth-child(3) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-31.png);
+}
 
+.block2_prod_produtcts div:nth-child(2) div:nth-child(1) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-41.png);
+    margin-top: 30px;
+}
 
+.block2_prod_produtcts div:nth-child(2) div:nth-child(2) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-5.png);
+    margin: 30px 30px 0px 30px;
+}
+
+.block2_prod_produtcts div:nth-child(2) div:nth-child(3) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-6.png);
+    margin-top: 30px;
+}
+
+.block2_prod_produtcts div:nth-child(3) div:nth-child(1) {
+    width: 370px;
+    height: 370px;
+    margin-top: 30px;
+    float: left;
+    background: url(img/product-11.png);
+}
+
+.block2_prod_produtcts div:nth-child(3) div:nth-child(2) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    margin-top: 30px;
+    margin: 30px 30px 0px 30px;
+    background: url(img/product-21.png);
+}
+
+.block2_prod_produtcts div:nth-child(3) div:nth-child(3) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    margin-top: 30px;
+    background: url(img/product-31.png);
+}
+
+.block2_prod_produtcts div:nth-child(4) div:nth-child(1) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-41.png);
+    margin-top: 30px;
+}
+
+.block2_prod_produtcts div:nth-child(4) div:nth-child(2) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-5.png);
+    margin: 30px 30px 0px 30px;
+}
+
+.block2_prod_produtcts div:nth-child(4) div:nth-child(3) {
+    width: 370px;
+    height: 370px;
+    float: left;
+    background: url(img/product-6.png);
+    margin-top: 30px;
+}
 
